# businesswizard

./: LICENSE  LICENSE.txt  README.md  Readme.md  pyproject.toml  setup.py
businesswizard/: __init__.py  db_wizard.py  file_wizard.py
businesswizard/chartwizard/: bullet_chart.py  funnel_chart.py  heatmap.py
businesswizard/dbwizard/: dataloader.py  execute_sql_commands.py  query_database.py  query_tools.py
businesswizard/filewizard/: bulk_import_csv.py  bulk_import_excel.py  compress_file.py  create_excel_report.py  filereader.py  query_parquet.py  refresh_workbook.py
businesswizard/functions/: __init__.py  add_leading_zero.py  clean_column_text.py  create_flag.py  date_diff.py  date_list.py  group_concat.py  subset_by_group.py
businesswizard/themes/: posit-gridless.mplstyle.mp
src/businesswizard/: __init__.py  charthero.py  datahero.py
